# template-data-analytics-project

./: .env  .gitignore  README.md  config.py  pyproject.toml
schemes/: inputs.py  outputs.py
utils/: read_data.py
