[tool.poetry]
name = "template-data-analytics-project"
version = "0.1.0"
description = "A template data analytics project."
authors = ["Shishin Mo <shishin.mo@zs.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
pandera = "^0.15.1"
pandas = {extras = ["excel"], version = "^2.0.2"}
pydantic = {extras = ["dotenv"], version = "^1.10.9"}

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
pyproject-flake8 = "^6.0.0.post1"
flake8-isort = "^6.0.0"
flake8-bugbear = "^23.2.13"
flake8-builtins = "^2.1.0"
flake8-unused-arguments = "^0.0.13"
flake8-pytest-style = "^1.7.2"
pep8-naming = "^0.13.3"
mypy = "^1.1.1"
black = "^23.1.0"
isort = "^5.12.0"
ipython = "^8.11.0"
ipykernel = "^6.22.0"
jupyterlab = "^3.6.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.isort]
line-length = 120
multi_line_output = 3
include_trailing_comma = true
known_local_folder = ['config',]

[tool.flake8]
max-line-length = 120
max-complexity = 18
ignore = "E203"

[tool.mypy]
plugins = "pandera.mypy"